crate/lib/sinex-macros/tests/compile_fail/missing_event_type.stderr
error: missing 'event_type' attribute
 --> tests/compile_fail/missing_event_type.rs:5:1
  |
5 | #[event_payload(source = "test-source")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
